<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stronger</string>
	<string name="physique">体质:</string>
	<string name="userinfo">个人信息</string>
	<string name="publicspace">公共空间</string>
	<string name="mypush">我的推送</string>
	<string name="assistant">私人助理</string>
	<string name="healthcenter">健康中心</string>
	<string name="information">资讯</string>	
	<string name="mywant">我的定制</string>
    <string name="personalassistant">个人助理</string>
    <string name="settle">结算</string>
    <string name="regoffice">科室选择</string>
    <string name="regconsult">咨询</string>
    <string name="regtest">体检</string>
    <string name="mailbox">邮箱：</string>
    <string name="password">密码：</string>
    <string name="inputmailbox">请输入邮箱:</string>
    <string name="inputpassword">请输入密码:</string>
    <string name="repassword">请再次输入密码:</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="heigh">身高:（cm）</string>
    <string name="weight">体重:（Kg）</string>
    <string name="submit">提交</string>
    <string name="respiratorymedicine">呼吸内科</string>
    <string name="anorectal">肛肠科</string>    
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="retest">重新测试</string>
    <string name="pushmedicines">推送药品</string>
    <string name="loading">正在加载......</string>
    <string name="medicineid">药品代号：</string>
    <string name="effect">功效：</string>
    <string name="taboo">禁忌：</string>
    <string name="manufacturer">厂商：</string>
    <string name="promotion">促销信息：</string>
    <string name="comments">查看评论</string>
    <string name="head">头部</string>
    <string name="nose">鼻子</string>
    <string name="oral">口腔</string>
    <string name="genital">生殖部位</string>
    <string name="lowerlimb">下肢</string>
    <string name="eye">眼部</string>
    <string name="ear">耳部</string>
    <string name="neck">颈部</string>
    <string name="chest">胸部</string>
    <string name="skin">皮肤</string>
    <string name="wholebody">全身症状</string>
    <string name="name">姓名：</string>
    <string name="age">年龄：</string>
    <string name="sex">性别：</string>
   	<string name="changepassword">修改密码</string>
   	<string name="input_oldpassword">输入旧密码：</string>
   	<string name="input_newpassword">输入新密码：</string>
   	<string name="confirm_newpassword">再次输入新密码：</string>
   	<string name="mymission">我的任务</string>
    <string name="missionover">返回</string>
    <string name="physiquetest">中医\n体质\n测试</string>
    <string name="fatrate">健康\n指数\n测试</string>
    <string name="OK">OK</string>
    <string name="dialogContent"></string>
    <string name="username">请输入昵称</string>
    <string-array name="agearray">
        <item>儿童(3-12)</item>
        <item>青年中年(13-45)</item>
        <item>老人(45-?)</item>
        <item>孕妇</item>
    </string-array>
    <string-array name="sexarray">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string name="next">继续</string>
    <string name="collect_medical_history">采集病史</string>
    <string name="allergic">过敏</string>
    <string name="cardiopathy">心脏病</string>
    <string name="hypertension">高血压</string>
    <string name="glycuresis">糖尿病</string>
    <string name="mymedicines">我的药物</string>
    <string name="changeuser">修改用户信息</string>
    <string name="option">软件设置</string>
    <string name="remember_mail">记住邮箱</string>
    <string name="remember_password">记住密码</string>
    <string name="src">跳转到电商平台</string>
    <string name="collect">收藏</string>
    <string name="comment">发表评论</string>
</resources>