<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/medicineNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/loading"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medicineid" />

        <TextView
            android:id="@+id/idTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/effect" />

        <TextView
            android:id="@+id/effectTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taboo" />

        <TextView
            android:id="@+id/tabooTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manufacturer" />

        <TextView
            android:id="@+id/manufacturerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/promotion" />

        <TextView
            android:id="@+id/promotionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading" />

    </LinearLayout>

    <Button
        android:id="@+id/commentsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comments" />
    
</LinearLayout>