<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical" >






        <Button
            android:id="@+id/regofficeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regoffice" />

    </LinearLayout>




    <Button
        android:id="@+id/regconsultButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regconsult" />



    <Button
        android:id="@+id/testButton"
        style="@android:style/Animation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regtest" />

</LinearLayout>