<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputuser" 
        android:textSize="25dp" />
    <EditText
        android:id="@+id/inputuserEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:inputType="text">
    </EditText>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputpassword" 
        android:textSize="25dp" />
    <EditText
        android:id="@+id/inputpasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/repassword" 
        android:textSize="25dp" />
    <EditText
        android:id="@+id/repasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/yesButton"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
        
    </LinearLayout>

</LinearLayout>