<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/user" 
        android:textSize="25dp"
        android:paddingTop="100dp"/>

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/password" 
        android:textSize="25dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height= "0dip"
        android:layout_weight="0.15" 
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
           
            />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/register" />

    </LinearLayout>

</LinearLayout>