<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:paddingBottom="10dip"
        android:paddingTop="10dip" >

        <TextView
            android:id="@+id/dialogContentTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="20dip"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="#000000"
            android:text="@string/dialogContent"/>
    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginTop="5dip"
        android:background="@drawable/lins" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip">

        <ImageView
            android:id="@+id/dialogTitleImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/elfin2" />

        <Button
            android:id="@+id/dialogButtonOk"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/OK" />

        <Button
            android:id="@+id/reButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/dialogTitleImage"
            android:text="@string/retest" />

    </RelativeLayout>

</LinearLayout>